--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.python-version
 
 # C extensions
 *.so
@@ -293,3 +294,4 @@ dkms.conf
 
 # Others
 */results
+*.ncu-rep
